package abstractfactory;

/**
 * @author zhenlei
 */
public class Blue implements Color{
    @Override
    public void fill() {
        System.out.println("blue fill");
    }
}
