package abstractfactory;

/**
 * @author zhenlei
 */
public interface Color {
    /**
     * 颜色填充抽象方法
     */
    public void fill();
}
