package abstractfactory;

/**
 * @author zhenlei
 */
public class Green implements Color {
    @Override
    public void fill() {
        System.out.println("green fill");
    }
}
