package abstractfactory;

/**
 * @author zhenlei
 */
public class Red implements Color {
    @Override
    public void fill() {
        System.out.println("red fill");
    }
}
