package abstractfactory;

/**
 * @author zhenlei
 */
public class Square implements Shape {
    @Override
    public void draw() {
        System.out.println("square draw");
    }
}
